fix spacing

--- a/apps/delivery-web/src/components/CategoryTabs/CategoryTabs.module.css
+++ b/apps/delivery-web/src/components/CategoryTabs/CategoryTabs.module.css
@@ -1,20 +1,19 @@
 .stickyContainer {
   position: fixed;
   top: 0; /* Will be overridden dynamically via inline style */
-  left: 0;
   width: 100%;
   max-width: 1064px;
   z-index: 100; /* Ensure it’s below the header (z-index: 101) but above content */
   background-color: #ffffff;
-  padding: 16px 80px 0 80px; /* Match the left and right padding of .productPageContainer */
-
+  padding: 35px 12px; /* Match the left and right padding of .productPageContainer */
+  margin-right: 296px;
   margin-bottom: 8px;
   height: 61px;
   max-height: 61px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   transition: top 0.3s ease;
 }
 
@@ -35,11 +34,11 @@
   background-color: #ffffff;
   margin-bottom: 8px;
   width: 100%; /* Use full width of the parent (after padding) */
-  height: auto;
+  /* height: auto; */
   min-height: 61px;
   scrollbar-width: none;
-  /* -ms-overflow-style: none; */
-  /* overflow-x: auto; */
+  -ms-overflow-style: none;
+  overflow-x: auto;
 }
 
 .tabsList {
@@ -105,11 +104,13 @@
   line-height: 24px;
   color: #000000;
   margin-bottom: 0;
+  background-color: #ffffff;
 }
 
 @media (max-width: 768px) {
   .stickyContainer {
     height: 80px;
+    top: 0; /* Will be overridden dynamically via inline style */
     z-index: 100;
     width: 100%;
     padding: 12px 12px 0 12px; /* Match the padding of .productPageContainer on mobile */
